visual: NULL dereference
p_data can be NULL causing a crash in Close(): https://bugs.launchpad.net/ubuntu/+source/vlc/+bug/958462
The plugin code is quality-challenged as a whole IMHO...
p_data can be NULL causing a crash in Close(): https://bugs.launchpad.net/ubuntu/+source/vlc/+bug/958462
The plugin code is quality-challenged as a whole IMHO...
added Component::Audio: filters Difficulty::easy Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
assigned to @edwardw and unassigned @MigrationBot
commit 73e24627 Author: Edward Wang edward.c.wang@compdigitec.com Date: Sat May 26 19:04:57 2012 -0400
visual: check for NULL before free
Close [#6879](https://code.videolan.org/videolan/vlc/-/issues/6879)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
Original author: edward.c.wang@compdigitec.com
added Status::fixed label
closed
VideoLAN code repository instance