visual: check for NULL before free

Close #6879

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>